# nautilus_trader

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: build.yml  docker.yml  performance.yml
crates/analysis/src/: analyzer.rs
crates/model/src/: enums.rs  position.rs
dev-env/: docker-compose.yml
dev-env/script/: postgres-schema.sql
docs/concepts/: live.md
docs/integrations/: okx.md
examples/backtest/: databento_test_request_bars.py
examples/live/bybit/: bybit_data_tester.py  bybit_exec_tester.py
examples/live/interactive_brokers/: historical_download.py  with_databento_instrument_id.py
examples/live/okx/: okx_exec_tester.py
examples/notebooks/: backtest_example.ipynb  backtest_fx_usdjpy.ipynb
nautilus_core/: Cargo.toml
nautilus_core/indicators/: Cargo.toml
nautilus_core/indicators/src/: ema.rs
nautilus_core/model/: Cargo.toml
nautilus_core/model/src/: position.rs
nautilus_core/model/src/data/: bar.rs  bar_api.rs  book.rs  book_api.rs  tick.rs  tick_api.rs
nautilus_core/model/src/events/: order.rs  position.rs
nautilus_core/model/src/instruments/: mod.rs  synthetic.rs  synthetic_api.rs
nautilus_core/model/src/orderbook/: book.rs  book_api.rs  ladder.rs  level.rs
nautilus_core/model/src/orders/: limit.rs  mod.rs
nautilus_core/model/src/types/: price.rs
nautilus_core/persistence/: Cargo.toml
nautilus_core/persistence/src/parquet/implementations/: bar.rs  delta.rs  quote.rs  trade.rs
nautilus_trader/adapters/binance/: execution.py
nautilus_trader/adapters/bitmex/: execution.py
nautilus_trader/adapters/bybit/: config.py  constants.py  data.py  execution.py  factories.py  providers.py
nautilus_trader/adapters/coinbase_intx/: execution.py
nautilus_trader/adapters/databento/: data.py
nautilus_trader/adapters/interactive_brokers/: data.py  execution.py  providers.py
nautilus_trader/adapters/okx/: config.py  execution.py  providers.py
nautilus_trader/backtest/: engine.pyx
nautilus_trader/cache/: cache.pyx
nautilus_trader/common/: actor.pyx
nautilus_trader/core/: nautilus_pyo3.pyi
nautilus_trader/core/includes/: model.h
nautilus_trader/data/: engine.pyx
nautilus_trader/live/: execution_engine.py
nautilus_trader/model/: position.pxd  position.pyx
nautilus_trader/risk/: engine.pyx
nautilus_trader/system/: kernel.py
tests/acceptance_tests/: test_backtest.py
(+47 files in other folders)
