[workspace]
members = [
    "backtest",
    "common",
    "core",
    "indicators",
    "model",
    "network",
    "network/tokio-tungstenite",
    "persistence",
    "pyo3"
]

[workspace.package]
rust-version = "1.70.0"
version = "0.6.0"
edition = "2021"
authors = ["Nautech Systems <info@nautechsystems.io>"]
description = "A high-performance algorithmic trading platform and event-driven backtester"
documentation = "https://docs.nautilustrader.io"

[workspace.dependencies]
chrono = "0.4.26"
futures = "0.3.28"
#pyo3 = { version = "0.19.1",  features = [ "rust_decimal", "chrono", "serde" ] }
#pyo3-asyncio =  { git = "https://github.com/awestlake87/pyo3-asyncio.git", branch = "pyo3-0.19",  features = [ "tokio-runtime", "tokio", "attributes" ]}
#pyo3-macros =  { version = "0.19.1"}

pyo3 = {  git ="https://github.com/alexcwyu/pyo3.git", branch = "release-0.19", features = [ "rust_decimal", "chrono", "serde", "fixed" ] }
pyo3-asyncio =  { git = "https://github.com/alexcwyu/pyo3-asyncio.git", branch = "pyo3-0.19",  features = [ "tokio-runtime", "tokio", "attributes" ]}
pyo3-macros =  {  git ="https://github.com/alexcwyu/pyo3.git", branch = "release-0.19"}

rand = "0.8.5"
rmp-serde = "1.1.1"
rust_decimal = "1.30.0"
rust_decimal_macros = "1.30.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.0", features = ["v4"] }
fixed = "1.23.1"
fixed-macro = "1.2.0"

# dev-dependencies
criterion = "0.5.1"
iai = "0.1.1"
rstest = "0.18.1"
tempfile = "3.6.0"

# build-dependencies
cbindgen = "0.24.5"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = false  # Fails Cython build if true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = true
debug-assertions = true  # Fails Cython build if true (OK for cargo test)
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
strip = true
panic = "abort"
incremental = false
codegen-units = 1
